--- a/contact.html
+++ b/contact.html
@@ -1,162 +1,329 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-
-<title>Contact US | TechTools</title>
-
-<meta name="description"
-content="Free online tools for PDF, images, calculators and developers. Secure, fast and easy to use tools for everyday needs.">
-
-<meta name="keywords" content="online tools,techtools,contact,contact us,techtools.best, pdf tools, image tools, calculator, developer tools, free tools">
-
-<meta name="author" content="TechTools">
+<title>Contact Us | TechTools</title>
+<meta name="description" content="Contact TechTools for questions, suggestions, or support. We usually reply within 24–48 hours.">
+<meta name="keywords" content="contact techtools, techtools support, techtools email">
+<meta name="author" content="Prahlad Yadav">
+<meta name="robots" content="index, follow">
+<link rel="canonical" href="https://techtools.best/contact.html">
 <link rel="icon" href="img/logo.png" type="image/png">
-<link rel="preconnect" href="https://cdn.jsdelivr.net">
-<link rel="dns-prefetch" href="https://cdn.jsdelivr.net">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="css/style1.css">
 
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+<style>
+/* ── Contact page specific ── */
+.contact-wrap {
+  max-width: 720px;
+  margin: 0 auto;
+  padding: 40px 24px 80px;
+}
 
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+/* Info cards row */
+.contact-info-grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 14px;
+  margin-bottom: 28px;
+}
+@media (max-width: 600px) {
+  .contact-info-grid { grid-template-columns: 1fr; }
+}
 
-<link rel="stylesheet" href="css/style.css">
+.contact-info-card {
+  background: #fff;
+  border: 1px solid var(--border);
+  border-radius: var(--r);
+  padding: 20px 16px;
+  text-align: center;
+  box-shadow: var(--shadow);
+  transition: box-shadow .2s, transform .2s;
+}
+.contact-info-card:hover {
+  transform: translateY(-3px);
+  box-shadow: var(--shadow-h);
+}
+.contact-info-icon {
+  font-size: 1.6rem;
+  margin-bottom: 8px;
+  display: block;
+}
+.contact-info-label {
+  font-size: .7rem; font-weight: 800;
+  color: var(--sub); text-transform: uppercase;
+  letter-spacing: .07em; margin-bottom: 5px;
+}
+.contact-info-val {
+  font-size: .82rem; font-weight: 600;
+  color: var(--text);
+  word-break: break-all;
+}
+.contact-info-val a {
+  color: var(--blue);
+  transition: color .15s;
+}
+.contact-info-val a:hover { color: var(--blue-d); }
+
+/* Form card */
+.contact-form-card {
+  background: #fff;
+  border: 1px solid var(--border);
+  border-radius: var(--r);
+  overflow: hidden;
+  box-shadow: var(--shadow);
+}
+.contact-form-head {
+  padding: 18px 22px;
+  border-bottom: 1px solid var(--border);
+  display: flex; align-items: center; gap: 10px;
+}
+.contact-form-head h2 {
+  font-size: 1rem; font-weight: 800;
+  letter-spacing: -.015em; margin: 0;
+}
+.contact-form-sub {
+  font-size: .82rem; color: var(--sub);
+  padding: 14px 22px 0;
+  line-height: 1.6;
+}
+.contact-form-card iframe {
+  display: block;
+  width: 100%;
+  height: 960px;
+  border: none;
+  margin-top: 8px;
+}
+
+/* Urgent note */
+.contact-note {
+  display: flex; align-items: flex-start; gap: 10px;
+  background: #fffbeb; border: 1px solid #fde68a;
+  border-radius: 10px; padding: 12px 16px;
+  font-size: .82rem; color: #92400e;
+  margin: 20px 0 0;
+  line-height: 1.6;
+}
+.contact-note .note-icon { font-size: 1rem; flex-shrink: 0; margin-top: 1px; }
+</style>
 </head>
 
 <body>
 
 <!-- LOADER -->
-<div id="loader">
-<div class="spinner"></div>
-</div>
+<div id="loader"><div class="ring"></div></div>
 
+<!-- ═══════════════ NAVBAR ═══════════════ -->
+<nav class="navbar" role="navigation" aria-label="Main navigation">
+  <div class="nav-inner">
 
-<!-- NAVBAR -->
-<nav class="navbar navbar-dark bg-primary fixed-top">
-<div class="container">
+    <a href="/" class="nav-logo" aria-label="TechTools Home">
+      <div class="logo-box">
+        <img src="img/logo.png" alt="TechTools"
+          onerror="this.style.display='none';this.nextElementSibling.style.display='block'">
+        <span class="lf">T</span>
+      </div>
+      <div class="logo-text">Tech<b>Tools</b></div>
+    </a>
 
-<a class="navbar-brand fw-bold" href="/"><img src="img/logo.png" alt="" style="width: 30px;"> TechTools</a>
+    <ul class="nav-menu" role="list">
+      <li><a href="/">Home</a></li>
+      <li class="has-drop">
+        <a href="#" onclick="return false" aria-haspopup="true">
+          Tools <span class="arrow">▼</span>
+        </a>
+        <div class="drop-menu">
+          <a href="youtube-tags.html"><div class="drop-icon" style="background:#fef2f2">🎯</div>YouTube Tag Generator</a>
+          <a href="youtube-thumbnail-download.html"><div class="drop-icon" style="background:#fffbeb">🖼️</div>Thumbnail Downloader</a>
+          <a href="qr-generator.html"><div class="drop-icon" style="background:#f0fdf4">📱</div>QR Code Generator</a>
+          <a href="hastag-generator.html"><div class="drop-icon" style="background:#eff6ff">#️⃣</div>Hashtag Generator</a>
+          <a href="payslip.html"><div class="drop-icon" style="background:#fdf4ff">💼</div>Payslip Generator</a>
+          <a href="image-resizer.html"><div class="drop-icon" style="background:#f0fdfa">🖼</div>Image Resizer</a>
+        </div>
+      </li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="contact.html" class="curr">Contact</a></li>
+      <li><a href="privacy.html">Privacy</a></li>
+      <li><a href="terms.html">Terms</a></li>
+      <li><a href="contact.html" class="nav-cta">Get Help →</a></li>
+    </ul>
 
-<button class="navbar-toggler" type="button" 
-data-bs-toggle="offcanvas" 
-data-bs-target="#mobileMenu">
-
-<span class="navbar-toggler-icon"></span>
-</button>
-
-</div>
+    <button class="hbg" id="hbg" aria-label="Toggle menu" aria-expanded="false">
+      <span></span><span></span><span></span>
+    </button>
+  </div>
 </nav>
 
+<!-- Mobile nav -->
+<nav class="mob-nav" id="mobNav">
+  <a href="/">🏠 Home</a>
+  <hr class="mob-divider">
+  <a href="youtube-tags.html">🎯 YouTube Tag Generator</a>
+  <a href="youtube-thumbnail-download.html">🖼️ Thumbnail Downloader</a>
+  <a href="qr-generator.html">📱 QR Code Generator</a>
+  <a href="hastag-generator.html">#️⃣ Hashtag Generator</a>
+  <a href="payslip.html">💼 Payslip Generator</a>
+  <a href="image-resizer.html">🖼 Image Resizer</a>
+  <hr class="mob-divider">
+  <a href="about.html">👤 About</a>
+  <a href="contact.html" style="color:#60a5fa">✉️ Contact</a>
+  <a href="privacy.html">🔒 Privacy Policy</a>
+  <a href="terms.html">📋 Terms of Service</a>
+</nav>
 
-<!-- DRAWER -->
-<div class="offcanvas offcanvas-end" id="mobileMenu">
-
-<div class="offcanvas-header bg-primary text-white">
-
-<h5 class="offcanvas-title">Menu</h5>
-
-<button type="button" class="btn-close btn-close-white"
-data-bs-dismiss="offcanvas"></button>
-
-</div>
-
-<div class="offcanvas-body">
-
-<ul class="navbar-nav">
-
-<li class="nav-item"><a class="nav-link" href="/">Home</a></li>
-<li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-<li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-<li class="nav-item"><a class="nav-link" href="disclaimer.html">Disclaimer</a></li>
-<li class="nav-item"><a class="nav-link" href="privacy.html">Privacy</a></li>
-<li class="nav-item"><a class="nav-link" href="terms.html">Terms</a></li>
-
-</ul>
-
-</div>
-
-</div>
-
-<!-- CONTACT SECTION -->
-<section class="container margintop">
-
-<div class="row justify-content-center">
-
-<div class="col-md-9">
-
-<div class="contact-box">
-
-<h3 class="text-center mb-3 ">Contact Us</h3>
-
-<p class="text-center text-muted mb-4">
-Have questions, suggestions, or need support?  
-Please use the form below to contact us. We usually reply within 24–48 hours.
-</p>
-
-<hr>
-
-<!-- GOOGLE FORM -->
-<iframe
-src="https://docs.google.com/forms/d/e/1FAIpQLSetc_SJsbi04h6lH5xvaAWN82JSz7zDyTjneUZLLHbnpqF69A/viewform?embedded=true"
-style="width:100%; height:959px; border:0;" scrolling="no">
-Loading…
-</iframe>
-
-
-<!-- CONTACT INFO -->
-<div class="mt-4 text-center">
-
-<p><strong>Email:</strong> 
-<a href="mailto:prahladyadavcktd100@gmail.com">
-prahladyadavcktd100@gmail.com
-</a>
-</p>
-
-<p><strong>Website:</strong> 
-<a href="https://techtools.best" target="_blank">
-https://techtools.best
-</a>
-</p>
-
-<p class="text-muted">
-For urgent matters, please mention "Urgent" in your message.
-</p>
-
-</div>
-
-</div>
-
-</div>
-
-</div>
-
+<!-- ═══════════════ HERO ═══════════════ -->
+<section class="hero">
+  <div class="hero-pill">✉️ Contact · We Reply in 24–48 hrs</div>
+  <h1>Contact <em>TechTools</em></h1>
+  <p class="hero-sub">Have a question, suggestion, or need support? Fill out the form below or reach us directly — we'd love to hear from you.</p>
 </section>
 
-<!-- FOOTER -->
-<footer>
+<!-- ═══════════════ CONTACT CONTENT ═══════════════ -->
+<div class="contact-wrap">
+      <div class="breadcrumb">
+    <a href="/">Home</a><span>›</span><span>Contact</span>
+  </div>
 
-<p>© 2026 TechTools. All Rights Reserved.</p>
+  <!-- Info cards -->
+  <div class="contact-info-grid">
 
-<p>
-<a href="privacy.html">Privacy Policy</a> |
-<a href="terms.html">Terms of Service</a> |
-<a href="contact.html">Contact Us</a>
-</p>
+    <div class="contact-info-card">
+      <span class="contact-info-icon">📧</span>
+      <div class="contact-info-label">Email</div>
+      <div class="contact-info-val">
+        <a href="mailto:prahladyadavcktd100@gmail.com">prahladyadavcktd100@gmail.com</a>
+      </div>
+    </div>
 
-<p class="mt-2">
-TechTools is committed to providing reliable and secure online utilities for daily use.
-</p>
+    <div class="contact-info-card">
+      <span class="contact-info-icon">🌐</span>
+      <div class="contact-info-label">Website</div>
+      <div class="contact-info-val">
+        <a href="https://techtools.best" target="_blank" rel="noopener">techtools.best</a>
+      </div>
+    </div>
 
+    <div class="contact-info-card">
+      <span class="contact-info-icon">⏱️</span>
+      <div class="contact-info-label">Response Time</div>
+      <div class="contact-info-val">Within 24–48 hours</div>
+    </div>
+
+  </div>
+
+  <!-- Google Form card -->
+  <div class="contact-form-card">
+    <div class="contact-form-head">
+      <span style="font-size:1.2rem">📬</span>
+      <h2>Send Us a Message</h2>
+    </div>
+    <p class="contact-form-sub">
+      Use the form below to get in touch. All fields are required unless marked optional.
+    </p>
+    <iframe
+      src="https://docs.google.com/forms/d/e/1FAIpQLSetc_SJsbi04h6lH5xvaAWN82JSz7zDyTjneUZLLHbnpqF69A/viewform?embedded=true"
+      loading="lazy"
+      title="TechTools Contact Form">
+      Loading…
+    </iframe>
+  </div>
+
+  <!-- Urgent note -->
+  <div class="contact-note">
+    <span class="note-icon">💡</span>
+    <span>For urgent matters, please mention <strong>"Urgent"</strong> in the subject or at the start of your message so we can prioritise your request.</span>
+  </div>
+
+</div>
+
+<!-- ═══════════════ FOOTER ═══════════════ -->
+<footer class="site-footer">
+  <div class="footer-in">
+    <div class="footer-top">
+
+      <div>
+        <div class="ft-logo">
+          <div class="ft-logo-box">
+            <img src="img/logo.png" alt="TechTools"
+              onerror="this.style.display='none';this.nextElementSibling.style.display='block'">
+            <span class="lf">T</span>
+          </div>
+          TechTools
+        </div>
+        <p class="ft-desc">Free online tools for YouTube creators, students, and developers. Built by Prahlad Yadav from India. No signup, no cost, always free.</p>
+        <div class="ft-chips">
+          <span class="ft-chip">🔒 No File Storage</span>
+          <span class="ft-chip">✅ No Login</span>
+          <span class="ft-chip">⚡ 100% Free</span>
+        </div>
+      </div>
+
+      <div class="ft-col">
+        <h4>Tools</h4>
+        <ul>
+          <li><a href="youtube-tags.html">🎯 YouTube Tags</a></li>
+          <li><a href="youtube-thumbnail-download.html">🖼️ Thumbnail Downloader</a></li>
+          <li><a href="qr-generator.html">📱 QR Code Generator</a></li>
+          <li><a href="hastag-generator.html">#️⃣ Hashtag Generator</a></li>
+          <li><a href="payslip.html">💼 Payslip Generator</a></li>
+          <li><a href="image-resizer.html">🖼 Image Resizer</a></li>
+        </ul>
+      </div>
+
+      <div class="ft-col">
+        <h4>Company</h4>
+        <ul>
+          <li><a href="about.html">👤 About Us</a></li>
+          <li><a href="contact.html">✉️ Contact</a></li>
+          <li><a href="disclaimer.html">📄 Disclaimer</a></li>
+        </ul>
+      </div>
+
+      <div class="ft-col">
+        <h4>Legal</h4>
+        <ul>
+          <li><a href="privacy.html">🔒 Privacy Policy</a></li>
+          <li><a href="terms.html">📋 Terms of Service</a></li>
+          <li><a href="disclaimer.html">⚠️ Disclaimer</a></li>
+        </ul>
+      </div>
+
+    </div>
+
+    <div class="footer-bottom">
+      <span>© 2026 TechTools by <a href="about.html">Prahlad Yadav</a>. All Rights Reserved.</span>
+      <div class="fbl">
+        <a href="privacy.html">Privacy</a>
+        <a href="terms.html">Terms</a>
+        <a href="contact.html">Contact</a>
+        <a href="about.html">About</a>
+      </div>
+    </div>
+    <!-- <p class="ads-note">This site may display ads via Google AdSense. See our <a href="privacy.html">Privacy Policy</a> for details.</p> -->
+  </div>
 </footer>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" defer></script>
+
+<!-- ADSENSE -->
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3666396936157058" crossorigin="anonymous"></script>
+
 <script>
-    /* LOADER */
-window.addEventListener("load", ()=>{
-document.getElementById("loader").style.display="none";
+/* ── Nav ── */
+var hbg    = document.getElementById('hbg');
+var mobNav = document.getElementById('mobNav');
+hbg.addEventListener('click', function() {
+  var open = mobNav.classList.toggle('show');
+  hbg.classList.toggle('open', open);
+  hbg.setAttribute('aria-expanded', String(open));
+});
+
+/* ── Loader ── */
+window.addEventListener('load', function() {
+  var l = document.getElementById('loader');
+  if (l) { l.style.opacity = '0'; setTimeout(function(){ l.remove(); }, 450); }
 });
 </script>
+
 </body>
 </html>
-
-
