--- a/disclaimer.html
+++ b/disclaimer.html
@@ -1,208 +1,225 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-
 <title>Disclaimer | TechTools</title>
-
-<meta name="description"
-content="Free online tools for PDF, images, calculators and developers. Secure, fast and easy to use tools for everyday needs.">
-
+<meta name="description" content="Free online tools for PDF, images, calculators and developers. Secure, fast and easy to use tools for everyday needs.">
 <meta name="keywords" content="online tools, pdf tools, image tools, calculator, developer tools, free tools">
-
-<meta name="author" content="TechTools">
+<meta name="author" content="Prahlad Yadav">
+<meta name="robots" content="index, follow">
+<link rel="canonical" href="https://techtools.best/disclaimer.html">
 <link rel="icon" href="img/logo.png" type="image/png">
-<link rel="preconnect" href="https://cdn.jsdelivr.net">
-<link rel="dns-prefetch" href="https://cdn.jsdelivr.net">
-
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-
-<link rel="stylesheet" href="css/style.css">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="css/style1.css">
 </head>
 
 <body>
 
 <!-- LOADER -->
-<div id="loader">
-<div class="spinner"></div>
-</div>
+<div id="loader"><div class="ring"></div></div>
 
+<!-- ═══════════════ NAVBAR ═══════════════ -->
+<nav class="navbar" role="navigation" aria-label="Main navigation">
+  <div class="nav-inner">
 
-<!-- NAVBAR -->
-<nav class="navbar navbar-dark bg-primary fixed-top">
-<div class="container">
+    <a href="/" class="nav-logo" aria-label="TechTools Home">
+      <div class="logo-box">
+        <img src="img/logo.png" alt="TechTools"
+          onerror="this.style.display='none';this.nextElementSibling.style.display='block'">
+        <span class="lf">T</span>
+      </div>
+      <div class="logo-text">Tech<b>Tools</b></div>
+    </a>
 
-<a class="navbar-brand fw-bold" href="/"><img src="img/logo.png" alt="" style="width: 30px;"> TechTools</a>
+    <ul class="nav-menu" role="list">
+      <li><a href="/">Home</a></li>
+      <li class="has-drop">
+        <a href="#" onclick="return false" aria-haspopup="true">
+          Tools <span class="arrow">▼</span>
+        </a>
+        <div class="drop-menu">
+          <a href="youtube-tags.html"><div class="drop-icon" style="background:#fef2f2">🎯</div>YouTube Tag Generator</a>
+          <a href="youtube-thumbnail-download.html"><div class="drop-icon" style="background:#fffbeb">🖼️</div>Thumbnail Downloader</a>
+          <a href="qr-generator.html"><div class="drop-icon" style="background:#f0fdf4">📱</div>QR Code Generator</a>
+          <a href="hastag-generator.html"><div class="drop-icon" style="background:#eff6ff">#️⃣</div>Hashtag Generator</a>
+          <a href="payslip.html"><div class="drop-icon" style="background:#fdf4ff">💼</div>Payslip Generator</a>
+          <a href="image-resizer.html"><div class="drop-icon" style="background:#f0fdfa">🖼</div>Image Resizer</a>
+        </div>
+      </li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="contact.html">Contact</a></li>
+      <li><a href="privacy.html">Privacy</a></li>
+      <li><a href="terms.html">Terms</a></li>
+      <li><a href="contact.html" class="nav-cta">Get Help →</a></li>
+    </ul>
 
-<button class="navbar-toggler" type="button" 
-data-bs-toggle="offcanvas" 
-data-bs-target="#mobileMenu">
-
-<span class="navbar-toggler-icon"></span>
-</button>
-
-</div>
+    <button class="hbg" id="hbg" aria-label="Toggle menu" aria-expanded="false">
+      <span></span><span></span><span></span>
+    </button>
+  </div>
 </nav>
 
+<!-- Mobile nav -->
+<nav class="mob-nav" id="mobNav">
+  <a href="/">🏠 Home</a>
+  <hr class="mob-divider">
+  <a href="youtube-tags.html">🎯 YouTube Tag Generator</a>
+  <a href="youtube-thumbnail-download.html">🖼️ Thumbnail Downloader</a>
+  <a href="qr-generator.html">📱 QR Code Generator</a>
+  <a href="hastag-generator.html">#️⃣ Hashtag Generator</a>
+  <a href="payslip.html">💼 Payslip Generator</a>
+  <a href="image-resizer.html">🖼 Image Resizer</a>
+  <hr class="mob-divider">
+  <a href="about.html">👤 About</a>
+  <a href="contact.html">✉️ Contact</a>
+  <a href="privacy.html">🔒 Privacy Policy</a>
+  <a href="terms.html">📋 Terms of Service</a>
+</nav>
 
-<!-- DRAWER -->
-<div class="offcanvas offcanvas-end" id="mobileMenu">
+<!-- ═══════════════ HERO ═══════════════ -->
+<section class="hero">
+  <div class="hero-pill">⚠️ Legal · Last Updated Feb 04, 2026</div>
+  <h1><em>Disclaimer</em></h1>
+  <p class="hero-sub">Please read this disclaimer carefully before using TechTools. By using our website, you agree to the terms outlined below.</p>
+</section>
 
-<div class="offcanvas-header bg-primary text-white">
+<!-- ═══════════════ CONTENT ═══════════════ -->
+<div class="page-wrap-sm">
+  <div class="tt-article" style="padding:0 0 60px; max-width:100%">
+      <div class="breadcrumb">
+    <a href="/">Home</a><span>›</span><span>Disclaimer</span>
+  </div>
 
-<h5 class="offcanvas-title">Menu</h5>
+    <p style="color:var(--sub);font-size:.85rem;">Last updated: February 04, 2026</p>
 
-<button type="button" class="btn-close btn-close-white"
-data-bs-dismiss="offcanvas"></button>
+    <h2>General Information</h2>
+    <p>The information provided on TechTools is published in good faith and for general informational purposes only. We make no warranties regarding the completeness, reliability, or accuracy of this information.</p>
 
+    <h2>Consent</h2>
+    <p>By using our website, you hereby consent to this Disclaimer and agree to its terms. If you do not agree with any part of this Disclaimer, please do not use our website.</p>
+
+    <h2>Professional Disclaimer</h2>
+    <p>The content on this website does not constitute legal, financial, medical, or professional advice. Users should consult qualified professionals before making any decisions based on our content.</p>
+
+    <h2>Liability Limitation</h2>
+    <p>TechTools shall not be held liable for any losses, damages, or inconveniences arising from the use of this website. This includes, but is not limited to, direct, indirect, incidental, consequential, or punitive damages.</p>
+
+    <h2>External Links Disclaimer</h2>
+    <p>Our website may contain links to third-party websites that are not maintained or controlled by TechTools. We do not guarantee the accuracy, reliability, or completeness of information on these external websites.</p>
+
+    <h2>Errors and Omissions</h2>
+    <p>While we strive to keep our content up to date, errors may occur. TechTools is not responsible for any errors, omissions, or results obtained from using this information.</p>
+
+    <h2>Fair Use Disclaimer</h2>
+    <p>Some content on this website may include copyrighted material used for educational, informational, or review purposes. Such use is believed to fall under fair use guidelines under applicable copyright laws.</p>
+
+    <h2>Use at Your Own Risk</h2>
+    <p>All information on TechTools is provided "as is" without any warranties, expressed or implied. Your use of the website is solely at your own risk.</p>
+
+    <h2>Damage Limitation</h2>
+    <p>In no event shall TechTools, its owners, employees, or partners be liable for any special, incidental, indirect, or consequential damages resulting from the use or inability to use this website.</p>
+
+    <h2>Views and User Content</h2>
+    <p>Any views, opinions, or user-generated content published on this website are the responsibility of the respective authors. TechTools reserves the right to remove content that violates our policies.</p>
+
+    <h2>Third-Party Policy</h2>
+    <p>TechTools is not responsible for any content, services, or products provided by third-party websites. Users interact with third-party services at their own risk.</p>
+
+    <h2>Contact Information</h2>
+    <p>If you have any questions regarding this Disclaimer, you may contact us:</p>
+    <ul>
+      <li>Email: <a href="mailto:prahladyadavcktd100@gmail.com" style="color:var(--blue)">prahladyadavcktd100@gmail.com</a></li>
+      <li>Website: <a href="https://techtools.best/contact.html" target="_blank" rel="noopener" style="color:var(--blue)">https://techtools.best/contact.html</a></li>
+    </ul>
+
+  </div>
 </div>
 
-<div class="offcanvas-body">
+<!-- ═══════════════ FOOTER ═══════════════ -->
+<footer class="site-footer">
+  <div class="footer-in">
+    <div class="footer-top">
 
-<ul class="navbar-nav">
+      <div>
+        <div class="ft-logo">
+          <div class="ft-logo-box">
+            <img src="img/logo.png" alt="TechTools"
+              onerror="this.style.display='none';this.nextElementSibling.style.display='block'">
+            <span class="lf">T</span>
+          </div>
+          TechTools
+        </div>
+        <p class="ft-desc">Free online tools for YouTube creators, students, and developers. Built by Prahlad Yadav from India. No signup, no cost, always free.</p>
+        <div class="ft-chips">
+          <span class="ft-chip">🔒 No File Storage</span>
+          <span class="ft-chip">✅ No Login</span>
+          <span class="ft-chip">⚡ 100% Free</span>
+        </div>
+      </div>
 
-<li class="nav-item"><a class="nav-link" href="/">Home</a></li>
-<li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-<li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-<li class="nav-item"><a class="nav-link" href="disclaimer.html">Disclaimer</a></li>
-<li class="nav-item"><a class="nav-link" href="privacy.html">Privacy</a></li>
-<li class="nav-item"><a class="nav-link" href="terms.html">Terms</a></li>
+      <div class="ft-col">
+        <h4>Tools</h4>
+        <ul>
+          <li><a href="youtube-tags.html">🎯 YouTube Tags</a></li>
+          <li><a href="youtube-thumbnail-download.html">🖼️ Thumbnail Downloader</a></li>
+          <li><a href="qr-generator.html">📱 QR Code Generator</a></li>
+          <li><a href="hastag-generator.html">#️⃣ Hashtag Generator</a></li>
+          <li><a href="payslip.html">💼 Payslip Generator</a></li>
+          <li><a href="image-resizer.html">🖼 Image Resizer</a></li>
+        </ul>
+      </div>
 
-</ul>
+      <div class="ft-col">
+        <h4>Company</h4>
+        <ul>
+          <li><a href="about.html">👤 About Us</a></li>
+          <li><a href="contact.html">✉️ Contact</a></li>
+          <li><a href="disclaimer.html">📄 Disclaimer</a></li>
+        </ul>
+      </div>
 
-</div>
+      <div class="ft-col">
+        <h4>Legal</h4>
+        <ul>
+          <li><a href="privacy.html">🔒 Privacy Policy</a></li>
+          <li><a href="terms.html">📋 Terms of Service</a></li>
+          <li><a href="disclaimer.html">⚠️ Disclaimer</a></li>
+        </ul>
+      </div>
 
-</div>
+    </div>
 
-<div class="page-box mt-5 ">
-
-<h3 class="text-center">Disclaimer</h3>
-
-<hr>
-<div class="container">
-
-<p>Last updated: February 04, 2026</p>
-
-<h3>General Information</h3>
-
-<p>
-The information provided on TechTools is published in good faith and for general informational purposes only.
-We make no warranties regarding the completeness, reliability, or accuracy of this information.
-</p>
-
-<h3>Consent</h3>
-
-<p>
-By using our website, you hereby consent to this Disclaimer and agree to its terms.
-If you do not agree with any part of this Disclaimer, please do not use our website.
-</p>
-
-<h3>Professional Disclaimer</h3>
-
-<p>
-The content on this website does not constitute legal, financial, medical, or professional advice.
-Users should consult qualified professionals before making any decisions based on our content.
-</p>
-
-<h3>Liability Limitation</h3>
-
-<p>
-TechTools shall not be held liable for any losses, damages, or inconveniences arising from the use of this website.
-This includes, but is not limited to, direct, indirect, incidental, consequential, or punitive damages.
-</p>
-
-<h3>External Links Disclaimer</h3>
-
-<p>
-Our website may contain links to third-party websites that are not maintained or controlled by TechTools.
-We do not guarantee the accuracy, reliability, or completeness of information on these external websites.
-</p>
-
-<h3>Errors and Omissions</h3>
-
-<p>
-While we strive to keep our content up to date, errors may occur.
-TechTools is not responsible for any errors, omissions, or results obtained from using this information.
-</p>
-
-<h3>Fair Use Disclaimer</h3>
-
-<p>
-Some content on this website may include copyrighted material used for educational, informational, or review purposes.
-Such use is believed to fall under fair use guidelines under applicable copyright laws.
-</p>
-
-<h3>Use at Your Own Risk</h3>
-
-<p>
-All information on TechTools is provided "as is" without any warranties, expressed or implied.
-Your use of the website is solely at your own risk.
-</p>
-
-<h3>Damage Limitation</h3>
-
-<p>
-In no event shall TechTools, its owners, employees, or partners be liable for any special, incidental, indirect,
-or consequential damages resulting from the use or inability to use this website.
-</p>
-
-<h3>Views and User Content</h3>
-
-<p>
-Any views, opinions, or user-generated content published on this website are the responsibility of the respective authors.
-TechTools reserves the right to remove content that violates our policies.
-</p>
-
-<h3>Third-Party Policy</h3>
-
-<p>
-TechTools is not responsible for any content, services, or products provided by third-party websites.
-Users interact with third-party services at their own risk.
-</p>
-
-<h3>Contact Information</h3>
-
-<p>
-If you have any questions regarding this Disclaimer, you may contact us:
-</p>
-
-<ul>
-<li>Email: prahladyadavcktd100@gmail.com</li>
-<li>Website: <a href="https://techtools.best/contact.html" target="_blank">https://techtools.best/contact.html</a></li>
-</ul>
-
-
-
-</div>
-</div>
-
-<!-- FOOTER -->
-<footer>
-
-<p>© 2026 TechTools. All Rights Reserved.</p>
-
-<p>
-<a href="privacy.html">Privacy Policy</a> |
-<a href="terms.html">Terms of Service</a> |
-<a href="contact.html">Contact Us</a>
-</p>
-
-<p class="mt-2">
-TechTools is committed to providing reliable and secure online utilities for daily use.
-</p>
-
+    <div class="footer-bottom">
+      <span>© 2026 TechTools by <a href="about.html">Prahlad Yadav</a>. All Rights Reserved.</span>
+      <div class="fbl">
+        <a href="privacy.html">Privacy</a>
+        <a href="terms.html">Terms</a>
+        <a href="contact.html">Contact</a>
+        <a href="about.html">About</a>
+      </div>
+    </div>
+    <!-- <p class="ads-note">This site may display ads via Google AdSense. See our <a href="privacy.html">Privacy Policy</a> for details.</p> -->
+  </div>
 </footer>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" defer></script>
+
+<!-- ADSENSE -->
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3666396936157058" crossorigin="anonymous"></script>
+
 <script>
-    /* LOADER */
-window.addEventListener("load", ()=>{
-document.getElementById("loader").style.display="none";
+var hbg    = document.getElementById('hbg');
+var mobNav = document.getElementById('mobNav');
+hbg.addEventListener('click', function() {
+  var open = mobNav.classList.toggle('show');
+  hbg.classList.toggle('open', open);
+  hbg.setAttribute('aria-expanded', String(open));
+});
+window.addEventListener('load', function() {
+  var l = document.getElementById('loader');
+  if (l) { l.style.opacity = '0'; setTimeout(function(){ l.remove(); }, 450); }
 });
 </script>
+
 </body>
 </html>
-
