--- a/index.html
+++ b/index.html
@@ -13,10 +13,25 @@
 <meta property="og:description" content="Generate YouTube tags, hashtags, QR codes, resize images and more — free, no signup.">
 <meta property="og:image" content="https://techtools.best/img/logo.png">
 <meta property="og:url" content="https://techtools.best/">
+<link rel="canonical" href="https://techtools.best/">
 <meta property="og:type" content="website">
 <meta name="twitter:card" content="summary_large_image">
+<meta property="og:image" content="https://techtools.best/img/logo.png">
+<meta property="og:image:width" content="1200">
+<meta property="og:image:height" content="630">
 <script type="application/ld+json">
-{"@context":"https://schema.org","@type":"WebSite","name":"TechTools","url":"https://techtools.best","description":"Free online tools for YouTube creators, students and developers","author":{"@type":"Person","name":"Prahlad Yadav"}}
+{
+  "@context": "https://schema.org",
+  "@type": "WebSite",
+  "name": "TechTools",
+  "url": "https://techtools.best",
+  "description": "Free online tools for YouTube creators, students and developers.",
+  "potentialAction": {
+    "@type": "SearchAction",
+    "target": "https://techtools.best/?q={search_term_string}",
+    "query-input": "required name=search_term_string"
+  }
+}
 </script>
 <link rel="icon" href="img/logo.png" type="image/png">
 <link rel="preconnect" href="https://fonts.googleapis.com">
