--- a/privacy.html
+++ b/privacy.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Disclaimer | TechTools</title>
+<title>Privacy Policy | TechTools</title>
 <meta name="description" content="Free online tools for PDF, images, calculators and developers. Secure, fast and easy to use tools for everyday needs.">
 <meta name="keywords" content="online tools, pdf tools, image tools, calculator, developer tools, free tools">
 <meta name="author" content="Prahlad Yadav">
