--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <style>
 
 </style>
-     
+    <script src="https://5gvci.com/act/files/tag.min.js?z=10665689" data-cfasync="false" async></script> 
 </head>
 <body>
 
@@ -486,4 +486,5 @@ window.addEventListener('load', function() {
 </body>
 
 </html>
+
 
