--- a/index.html
+++ b/index.html
@@ -29,7 +29,12 @@
 <style>
 
 </style>
-    <script src="https://5gvci.com/act/files/tag.min.js?z=10665689" data-cfasync="false" async></script> 
+    <script async src="//www.ezojs.com/ezoic/sa.min.js"></script>
+<script>
+    window.ezstandalone = window.ezstandalone || {};
+    ezstandalone.cmd = ezstandalone.cmd || [];
+</script>
+<script src="//ezoicanalytics.com/analytics.js"></script>
 </head>
 <body>
 
@@ -486,6 +491,7 @@ window.addEventListener('load', function() {
 </body>
 
 </html>
+
 
 
 
